[package]
name = "simple-http-server"
version = "0.6.10"
authors = ["thewawar <thewawar@gmail.com>"]
license = "MIT"
description = "Simple HTTP server"
readme = "README.md"
keywords = ["simple", "http", "server", "static", "file"]
repository = "https://github.com/TheWaWaR/simple-http-server"
edition = "2018"

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.9"
clap = "2.33.0"
filetime = "0.2.7"
flate2 = "1.0.11"
hex = "0.4.3"
htmlescape = "0.3.1"
hyper-native-tls = { version = "0.3.0", optional = true }
iroh-net = "0.28"
# Iron crates
iron = "0.6.1"
iron-cors = "0.8.0"
lazy_static = "1.4.0"
mime_guess = "2.0"
multipart = { version = "0.18", default-features = false, features = ["server", "iron"] }
open = "1"
openssl = { version = "0.10", features = ["vendored"], optional = true }
path-dedot = "1"
percent-encoding = "2.3.0"
pretty-bytes = "0.2.2"
quinn = { version = "0.12", package = "iroh-quinn" }
rand = "0.8.3"
rustls = { version = "0.20", optional = true }
termcolor = "1.0.5"
time = "0.1.42"
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.1.0"

[features]
default = ["native-tls"]
only-openssl = ["native-tls", "openssl"]
native-tls = ["hyper-native-tls"]
